--- a/css/prime.css
+++ b/css/prime.css
@@ -10,6 +10,11 @@ h1.title {
 hr.solid-line {
 	border-bottom: 1px solid black;
 	width:50%;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
 
 hr.vert-line {
@@ -21,7 +26,6 @@ BODY {
 	background-image: url("bg.jpg");
 	background-color: #cccccc;
 	background-attachment: fixed;
-	font-family: Lato, Tahoma, Helvetica, Arial, sans-serif;
 	color:white;
 }
 
@@ -75,6 +79,12 @@ li {
 	font-size: 3em;
 	text-align:center;
 	margin-bottom:0;
+	
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
 
 @keyframes blink{
@@ -106,8 +116,12 @@ li {
   padding: 6px 0; 
 }
 
-a {
-	color: 	#ADD8E6;
+.buttons {
+	margin: 10px;
+}
+
+.subheader {
+	font-size: 24px;
 }
 
 #expertise SECTION{margin-bottom:2em}
@@ -115,6 +129,48 @@ a {
 #expertise .icon{width:1em;height:1em;vertical-align:middle;padding-right:.25em}
 #expertise .pos{fill:#7CFC00}
 #expertise .neg{fill:#ca0107}
-#expertise{margin:auto;margin-top:30px;max-width:500px;}
-.subhead{font-size:1.5em;margin-left:1.4em;text-indent:-1.4em}
-.subtitle{font-size:1.5em;text-align:center;text-decoration:underline;}
+#expertise{
+	margin:auto;
+	margin-top:30px;
+	max-width:500px;
+	padding: 30px;
+	background-color: white;
+	border-radius: 30px;
+	color: black;
+	text-align: center;
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
