--- a/css/prime.css
+++ b/css/prime.css
@@ -50,8 +50,8 @@ body {
 
 .img-circle {
     border-radius: 50%;
-	width:25%;
-	height:25%;
+	width:12%;
+	height:12%;
 	display: block;
 	margin:auto;
 }
@@ -151,7 +151,8 @@ li {
 #expertise{
 	margin:auto;
 	margin-top:30px;
-	max-width:500px;
+	margin-left: 50px;
+	margin-right: 50px;
 	padding: 30px;
 	background-color: white;
 	border-radius: 30px;
